--- a/app/views/classifields/index.html.erb
+++ b/app/views/classifields/index.html.erb
@@ -1,6 +1,7 @@
 <%= stylesheet_link_tag "bootstrap-min"%>
 <%= stylesheet_link_tag "bootstrap-theme-min"%>
-<h2>Search Nearby</h2>
+<h2>Search Nearby(kundrathur)</h2>
+<h3>Type in 'carpenters','plumbers' and other keywords to look nearby</h3>
 
   <%= form_tag classifields_path, :method => :get do %>
       <p>
