--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="align_it">
-<h1>Sign Up</h1>
+<h1>Sign Up[Gmail Accounts]</h1>
 <%= form_for @user do |f| %>
 
     <% if @user.errors.any? %>
